--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 <body>
+
+    <!--Xenor48's site link-->
+
+    <a href="Xenors_site_name/Xenor48_site_index.html"> Xenor48 site</a>
+
+    <!--End of site link-->
+
+    <br> <br> <!-- br goes brrrrrrrrrrrrrrrrrrrrr -->
+
+    <!--Seni38's site link-->
+
+    <a href="Seni38_site_name/seni38_site_index.html"> Seni38 site </a>
+
+    <!--End of site link-->
+
+
+
 <h1> pls work </h1>
 </body>
 </html>
