--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <!--End of site link-->
 
+    <!--U (EDK) cook access to your page here or maybe above mine or Xenor's text (I dont really care) here-->
+
 
 
 <h1> pls work </h1>
