--- a/Seni38_site_name/seni38_site_index.html
+++ b/Seni38_site_name/seni38_site_index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcomne to Seni38's website.</h1>
-    <p>The reason why I created this website is because I'm going to learn both html and css with "Xenor48"</p>
+    <p>There's curently nothing here.... <br> Check back later.</p>
 </body>
 </html>
