--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--Seni38's site link-->
 
-    <a href="Seni38_site_name/seni38_site_index.html"> Seni38 site </a>
+    <a href="Seni38_site_name/Site.html"> Seni38 site </a>
 
     <!--End of site link-->
 
