--- a/Seni38_site_name/Site.html
+++ b/Seni38_site_name/Site.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcomne to Seni38's website.</h1>
     <p>There's curently nothing here.... <br> Check back later.</p>
+
+    <a href="test_site.html" title="test 1"><button style="border: 5px solid; border-radius: 10px;">Idk why button...</button></a>
 </body>
 </html>
