--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--End of site link-->
 
-    <a href="EDK_insert_name/"> EDK site </a>
+    <a href="Edk_insert_name/"> EDK site </a>
 
 
 
