--- a/Edk_insert_name/index.html
+++ b/Edk_insert_name/index.html
@@ -18,7 +18,7 @@
   
   <body>
     <center>
-      ><h1 class="site_header">EDK's Site</h1>
+      <h1 class="site_header">EDK's Site</h1>
       <h2>Random stuff I'm putting here 🫠</h2>
     </center>
   </body>
