--- a/Seni38_site_name/Site.html
+++ b/Seni38_site_name/Site.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seni38's page</title>
 </head>
 <body>
     <h1>Welcomne to Seni38's website.</h1>
-    <p>There's curently nothing here.... <br> Check back later.</p>
+    <p>There's curently not much to see here.... <br> Check back later.</p>
 
-    <a href="test_site.html" title="test 1"><button style="border: 5px solid; border-radius: 10px;">Idk why button...</button></a>
+  
+
+    <hr>
+    <H1 id="tutorial_main-page"> Tutorial(s) </H1>
+    <p> This page wil be for random html (text based) tutorial because idk what else to put here lol </p>
+
+    <!-- List 1 -->
+    <ul>
+        <li>
+            Headers and paragraphs <ul><li><a href="tutorial 1/header.html" title="Learn how to use headers in html." target="">Headers</a></li></ul>
+        </li>
+    </ul>
+
+
+
+
+
+    <!-- End of list 1 -->
 </body>
 </html>
