Modified Seni38's site
I changed some stuff in it (dark theme goes brrrrr (for now))

--- a/Seni38_site/site.html
+++ b/Seni38_site/site.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seni38's page</title>
+    <title>Seni38's page</title> <link rel="stylesheet" href="stylesheetmain.css">
 </head>
 <body>
 <header>
@@ -32,7 +32,9 @@
     <!-- End of list 1 -->
 </main>
 <footer>
-    
+    <!--Link to site selection-->
+    <br> <br>
+    <a href="/index.html" title="Return to the site selection page" class="sites_page"><button id="sites_page">Return to sites page</button></a>
 </footer>
 </body>
 </html>
