--- a/Seni38_site/tutorial 1/header.html
+++ b/Seni38_site/tutorial 1/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headers -Seni38</title>
+    <title>Headers -Seni38</title> <link rel="stylesheet" href="/Seni38_site/stylesheetmain.css">
 </head>
 <body>
     <h1> Headers: </h1> <hr> <br>
@@ -18,13 +18,13 @@
     <h5>h5 header</h5>
     <h6>h6 header</h6>
     <br>
-    <p>The next 2 "headers" will have a number that's higher than 6, which will result in it to not function as a header. It's not reccomend to use those in a website.</p>
+    <p>The next 2 "headers" will have a number that's higher than 6, which will result in it to not function as a header. It's not recommend to use those in a website.</p>
     <br>
     <h7>h7 header</h7>
     <h8>h8 header</h8>
     
     <!-- Return to main page page button (0) -->
     <br> <br>
-    <a href="/Seni38_site_name/site.html">Main page</a>
+    <a href="/Seni38_site/site.html">Main page</a>
 </body>
 </html>
