--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--Seni38's site link-->
 
-    <a href="Seni38_site_name/site.html"> Seni38 site </a> <br> <br> <!-- it goes brrrr again -->
+    <a href="Seni38_site/site.html"> Seni38 site </a> <br> <br> <!-- it goes brrrr again -->
 
     <!--End of site link-->
 
