--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
 
     <a href="Edk_insert_name/"> EDK site </a>
 
-
-
 <h1> pls work </h1>
+
+<footer>
+
+    <p>The site has changed to the following location:
+    </p>
+    <a href="https://seni3800.github.io/index.html" title="The site"> seni3800.github.io </a>
+
+</footer>
+
 </body>
 </html>
